--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <title>Collections</title>
 </head>
 
